we made sure all the files were correctly refrenced so that the css styling was applied.

--- a/donate.html
+++ b/donate.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
-    <link rel="stylesheet" href="cool.css">
+    <link rel="stylesheet" href="css/styles.css">
     
 </head>
 <body>
  <div class="topnav">
-    <a href="arjunisthegoat.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="donate.html">Donate</a>
