--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELP THE FLOOD DOGS</title>
-    <link rel="stylesheet" href="cool.css">
+    <link rel="stylesheet" href="css\styles.css">
 </head>
 <div class="topnav">
-    <a href="arjunisthegoat.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
     <a href="donate.html">Donate</a>
@@ -17,7 +17,7 @@
     <p>Recently in texas there was a flood that displaced many families and their pets. Many dogs are in need of food, shelter, and medical care.</p>
     <p>Many dogs were seperated from their familles during the floods we need your help to help them with basic nesecities like food toys and beds
     <p>Many dogs have lost their homes and are in desperate need of help. They are scared, confused, and in need of love and care.</p>
-    <img src="Dog Saved from Flood.png" alt="Dog saved rfom flood in Texas" width="500px" height="500px" class="center">
+    <img src="images\Dog Saved from Flood.png" alt="Dog saved from flood in Texas" width="500px" height="500px" class="center">
     <h1>Why donate to Flood dogs fund?</h1>
     <p>Your donations will help us provide flood dogs with the best treats, toys, grooming and more to keep them happy and healthy. Every little bit helps!</p>
     <ul>
@@ -25,7 +25,7 @@
         <li>you can donate to other charities for this cause after all we all are working towards the same goal</li>
         <li>make sure to donate your dog items you dont need to your nearest petsmart they will donate to dogs in need</li>
     </ul>
-    <img src ="shelterpets_affected_by_floods.jpg" alt="one hundred and twenty seven dogs in the shelter pet were affected " width="500px" height="500px" style="left: auto;">
-    <img src="flood.jpg" alt="dog affected by Flood" width="500" height="500">
+    <img src ="images\shelterpets_affected_by_floods.jpg" alt="one hundred and twenty seven dogs in the shelter pet were affected " width="500px" height="500px" style="left: auto;">
+    <img src="images\flood.jpg" alt="dog affected by Flood" width="500" height="500">
     <div></div>
 </html>
