--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,30 @@
         <h1>Contact Us</h1>
     </header>
     <main>
-        <section>
-            <h2>Get in Touch</h2>
-            <p>If you have any questions, feel free to reach out!</p>
-        </section>
+     <div class="container">
+  <form action="action_page.php">
+
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+
+  </form>
+</div>
+   
     </main>
     <footer>
         <p>&copy; 2023 Our Company</p>
